# bsky2masto

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
scripts/: bsky2masto.py
src/bsky2masto/: __init__.py  _version.py  cli.py  core.py
tests/: test_cli.py  test_core_handles.py  test_csv_output.py
