[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsky2masto"
version = "0.1.0"
description = "Find Mastodon/Fediverse accounts from Bluesky follows and generate import CSV files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Walter Rafelsberger" }]
keywords = ["bluesky", "mastodon", "fediverse", "migration", "social-graph"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/walterra/bsky2masto"
Repository = "https://github.com/walterra/bsky2masto"
Issues = "https://github.com/walterra/bsky2masto/issues"
Changelog = "https://github.com/walterra/bsky2masto/releases"

[project.scripts]
bsky2masto = "bsky2masto.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0",
  "ruff>=0.15",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv]
default-groups = ["dev"]
